<resources>
    <string name="app_name">OScar</string>
    <string name="title_activity_start">Inizializzazione sistema</string>
    <string name="title_size">Dimensioni campo: </string>
    <string name="MsizeTitle">M:</string>
    <string name="NsizeTitle">N:</string>
    <string name="title_init">Posizione iniziale: </string>
    <string name="title_orientation">Orientamento: </string>
    <string name="MinitTitle">M:</string>
    <string name="NinitTitle">N:</string>
    <string name="radioNord">Nord</string>
    <string name="radioEast">Est</string>
    <string name="radioSouth">Sud</string>
    <string name="radioWest">Ovest</string>
    <string name="title_test">Collaudo: </string>
    <string name="radioTest1">1.Movimento</string>
    <string name="radioTest2">2.Comunicazione</string>
    <string name="radioTest3">3.Interazione</string>
    <string name="buttonEnter">Invio</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo_of_app">Logo of App</string>
    <string name="todo">TODO</string>
    <string name="powered">powered by Nasi</string>
    <string name="palline_da_trovare">Palline da trovare:</string>
    <string name="mappa">Mappa:</string>
    <string name="_1_movimento">1. Movimento</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="error_missing_permissions" />


</resources>
